# object-depth-and-orientation-detection

./: CMakeLists.txt  README.md  package.xml
include/imagerecognition/: imagedetect.h
launch/: new_cam.launch
src/: camFusion_Student.cpp  harris.cpp  imagedetect.cpp  imagedetectnode.cpp  matching2D_Student.cpp  msg_filter.cpp  new_data.cpp  objectDetection2D.cpp
